--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -779,7 +779,7 @@ Welcome.MenuToolTip=<html>Opens the Yapbam welcome screen.<br>This dialog provid
 #The welcome screen itself
 Welcome.introduction=<html>Welcome to <b>Yapbam</b></html>
 Welcome.showAtStartup=Show at startup
-Welcome.showAtStartup.tooltip=Check this box to see this dialog at every Yapbam startup
+Welcome.showAtStartup.tooltip=Check this box to see this dialog box at every Yapbam startup
 
 #Title of the shortcuts panel
 Welcome.shorcuts.title=Useful shortcuts
@@ -861,76 +861,73 @@ DeleteCheckedTransactionAlert.message=You are about to delete a checked transact
 DeleteTransactionAlert.title=Transaction deletion
 DeleteTransactionAlert.message=You are about to delete a transaction.
 
-#---------------------------------------------------------------------------------------------------------------------------------
-# Added or modified since last translation
-
 # This new preference dialog tab allows the user to set what is remembered between Yapbam launches
 PreferencesDialog.StartState.title=Launch state
-PreferencesDialog.StartState.tooltip=This tab allows you to configure what is remembered between Yapbam launches
-PreferencesDialog.StartState.tabsOrder=Remember the tabs order
-PreferencesDialog.StartState.tabsOrder.tooltip=Check this box to keep tabs order between Yapbam launches
+PreferencesDialog.StartState.tooltip=This tab allows you to configure the settings to be remembered across Yapbam launches
+PreferencesDialog.StartState.tabsOrder=Remember the tab-order 
+PreferencesDialog.StartState.tabsOrder.tooltip=Check this box to maintain the tab-order across Yapbam launches
 PreferencesDialog.StartState.tableTitle=Tables
-PreferencesDialog.StartState.columnsWidth=Remember the columns width
-PreferencesDialog.StartState.columnsWidth.tooltip=Check this box to keep columns width between Yapbam launches
-PreferencesDialog.StartState.columnsOrder=Remember the columns order
-PreferencesDialog.StartState.columnsOrder.tooltip=Check this box to keep columns order between Yapbam launches
+PreferencesDialog.StartState.columnsWidth=Remember column widths
+PreferencesDialog.StartState.columnsWidth.tooltip=Check this box to maintain column widths across Yapbam launches
+PreferencesDialog.StartState.columnsOrder=Remember the order of columns 
+PreferencesDialog.StartState.columnsOrder.tooltip=Check this box to maintain the order of columns across Yapbam launches
 PreferencesDialog.StartState.hiddenColumns=Remember hidden columns
-PreferencesDialog.StartState.hiddenColumns.tooltip=Check this box to keep hidden columns between Yapbam launches
+PreferencesDialog.StartState.hiddenColumns.tooltip=Check this box to maintain hidden columns across Yapbam launches
 PreferencesDialog.StartState.dataTitle=Data
 PreferencesDialog.StartState.openedFile=Remember last opened file
 PreferencesDialog.StartState.openFile.tooltip=Check this box to automatically reopen last opened file at startup
 PreferencesDialog.StartState.filter=Remember the filter 
-PreferencesDialog.StartState.filter.tooltip=Check this box to remember the filter between Yapbam launches
-Tip.7=<html>Keep the filter between two Yapbam launches.<hr style="width:40%">In the dialog opened by the menu <b>{0}</b>/<b>{1}</b>, the <b>{2}</b> tab sets what informations are remembered between to Yapbam sessions, in particular, the last filter used.</html>
+PreferencesDialog.StartState.filter.tooltip=Check this box to remember the filter across Yapbam launches
+Tip.7=<html>Keep the filter between two Yapbam launches.<hr style="width:40%">In the dialog opened by the menu <b>{0}</b>/<b>{1}</b>, the <b>{2}</b> tab sets the information remembered between two Yapbam sessions; in particular, the last filter used.</html>
 
 # A new button is available in the "new transaction dialog", it allows the user to validate the edited transaction
-# without closing the dialog (the dialog is resetted to its empty state).
-# In order to keep it simple for the newbie, this button only appears when the user makes press the shift key while opening the dialog
+# without closing the dialog (the dialog is reset to its empty state).
+# In order to keep it simple for the newbie, this button only appears when the user presses the shift key while opening the dialog
 TransactionDialog.next=Next
-TransactionDialog.next.tooltip=Click to validate the transaction and reset the dialog and start editing a new transaction
+TransactionDialog.next.tooltip=Click to validate the transaction, reset the dialog box and then start editing a new transaction
 MainMenu.Transactions.NewMultiple=New bulk transactions
-MainMenu.Transactions.NewMultiple.ToolTip=Opens the transaction dialog for creating multiple transactions
-Tip.8=<html>Create your bulk transactions<hr style="width:40%">When you open the transaction creation dialog with the <b>"{0}"</b> menu, a button <b>"{1}"</b> appears in the dialog.<br><br>It validates the current transaction and reset the dialog. This allows you to save time when you must enter many transactions.</html>
+MainMenu.Transactions.NewMultiple.ToolTip=Opens the transaction dialog box for creating multiple transactions
+Tip.8=<html>Create your bulk transactions<hr style="width:40%">When you open the transaction creation dialog box with the <b>"{0}"</b> menu, a button <b>"{1}"</b> appears in the dialog.<br><br>It validates the current transaction and resets the dialog box. This helps you to save time when you want to enter many transactions.</html>
 
 #A new transaction's attribute: a comment
 Transaction.comment=Comment
 #Field tooltip in the "new transaction" dialog
-TransactionDialog.comment.tooltip=Enter the transaction comment
+TransactionDialog.comment.tooltip=Enter a comment for the transaction 
 #New checkbox in the preference panel to set how the comment is displayed in the tables (merge with description, or in its own column).
-MainFrame.Transactions.Preferences.commentDisplay=Show transaction's comment in a separate column from description
-MainFrame.Transactions.Preferences.commentDisplay.tooltip=Check this box to display comment in a separate column (Otherwise, the comment will be placed in parentheses after the description)
+MainFrame.Transactions.Preferences.commentDisplay=Show comment and description in separate columns
+MainFrame.Transactions.Preferences.commentDisplay.tooltip=Check this box to display comment in a separate column (Otherwise, the comment is shown in parentheses after the description.)
 #Tooltips of the comment filter box
-CustomFilterPanel.comment.toolTip=Text to compare with transaction's comment
+CustomFilterPanel.comment.toolTip=Text to compare with transaction's comment; used as a transaction filter
 CustomFilterPanel.comment.contains.toolTip=Select this if the comment should contain the entered text
 CustomFilterPanel.comment.equals.toolTip=Select this if the comment should be the same as the entered text
 CustomFilterPanel.comment.regularExpression.toolTip=Select this if the comment should satisfy the following regular expression
 
 #---------------------------------
-TextMatcherFilterPanel.invalidRegularExpression=The regular expression {0} is incorrect
+TextMatcherFilterPanel.invalidRegularExpression=The regular expression {0} is incorrect.
 ExportDialog.columnsChangedMessage=<html>The list of attributes of transactions has changed since the last export.<br>Impossible to automatically restore the column list to export.<br><br>Don't forget to set it in the following dialog.</html>
 MainFrame.ReadLastFilterError=Unable to restore the saved filter. The filter is cleared.
-MainFrame.SaveStateError=<html>An error occurred while saving the state of Yapbam.<br><br>Common causes are:<ul><li>file {0} is writable</li><li>the disk is full</li></ul></html>
-MainFrame.SavePreferencesError=<html>An error occurred while saving the preferences.<br><br>Common causes are:<ul><li>file {0} is writable</li><li>the disk is full</li></ul></html>
+MainFrame.SaveStateError=<html>An error occurred while saving the state of Yapbam.<br><br>Common causes are:<ul><li>file {0} is not writable</li><li>the disk is full</li></ul></html>
+MainFrame.SavePreferencesError=<html>An error occurred while saving the preferences.<br><br>Common causes are:<ul><li>file {0} is not writable</li><li>the disk is full</li></ul></html>
 
 #The balance fields in the transactions tab can now be selected.
-#Click on one of them selects it and makes it the reference. Others fields contain now value relative to this reference.
+#A click on one of them selects it and makes it the reference. Others fields contain now value relative to this reference.
 #Click again removes the reference and restores the original display 
 #These two wordings are added to the tooltips of balance fields (only the one that applied to the current balance selected/notSelected state) 
 MainFrame.BalancePanel.NotSelected.ToolTip=Click this button to take this amount as the reference for other balance fields
-MainFrame.BalancePanel.Selected.ToolTip=Click this button to deselected this reference and make fields display their absolute value
+MainFrame.BalancePanel.Selected.ToolTip=Click this button to deselect this reference and make fields display their absolute value
 #This wording is added to the balance tooltip when it displays a relative amount
 MainFrame.BalancePanel.Relative.ToolTip=<b>WARNING</b>: This field contains a value relative to the selected balance 
 #A new tip explaining all this stuff !
-Tip.9=<html>Yapbam can display relative balances summary.<hr style="width:40%">You can select one of the balances shown at the bottom of the <b>{0}</b> tab by clicking on it. The remaining balances are then calculated relative to this reference.</html>
+Tip.9=<html>Yapbam can display a summary of relative balances.<hr style="width:40%">You can select one of the balances shown at the bottom of the <b>{0}</b> tab by clicking on it. The remaining balances are then calculated relative to this reference.</html>
 
 #--------------------------------
 ImportDialog.error.emptyFile=The imported file is empty
 ImportDialog.error.exception=An error ({0}) occurred while reading the imported file
 
-MainMenu.CheckUpdate.Success.Detail=<HTML><BODY>Your version: <B>{0}</B><BR>Latest version: <B>{1}</B><BR><BR>Release notes are available on <b>http://www.yapbam.net</b><BR><BR>What would you like to do ?</BODY></HTML>
+MainMenu.CheckUpdate.Success.Detail=<HTML><BODY>Your version: <B>{0}</B><BR>Latest version: <B>{1}</B><BR><BR>Release notes are available on <b>http://www.yapbam.net</b><BR><BR>What would you like to do?</BODY></HTML>
 HelpManager.unsupported.message=<HTML>Unable to open a web browser.<br><br>The URL ({0}) has been copied to the clipboard.<br>You can now paste it to your web browser.</HTML> 
-openDialog.fileDoesntExist=The selected file doesn't exists
-openDialog.targetDoesntExist=The target of the selected shortcut doesn't exists
+openDialog.fileDoesntExist=The selected file does not exist
+openDialog.targetDoesntExist=The target of the selected shortcut does not exist.
 
 MainMenu.Transactions.Periodical.disabled.tooltip.line1=This element is grayed out because there's no periodical transaction defined
 MainMenu.Transactions.Periodical.disabled.tooltip.line2=Periodical transactions can be defined in "{0}" part of "{1}" panel
@@ -945,8 +942,8 @@ PreferencesDialog.Network.invalidPort=The proxy port is out of range in the "{0}
 MainFrame.LastNotFound=The last opened file ({0}) does not exist anymore
 
 #---------------------------------
-# New dialogs when an update is available but can't be installed (yapbam installatio directory is write protected).
-MainMenu.CheckUpdate.Success.systemProtected=<html>Your version: <B>{0}</B><BR>Latest version: <B>{1}</B><BR><BR>Yapbam cannot update itself because its installation directory is protected by the system (maybe windows UAC ?).<br><br>You''ll have to install this update manually using the installer.<br><br>This installer and the release notes are available at <a href="http://www.yapbam.net">http://www.yapbam.net</a></html>
+# New dialogs when an update is available but can't be installed (Yapbam installation directory is write protected).
+MainMenu.CheckUpdate.Success.systemProtected=<html>Your version: <B>{0}</B><BR>Latest version: <B>{1}</B><BR><BR>Yapbam cannot update itself because its installation directory is protected by the system (maybe windows UAC?)<br><br>You will have to install this update manually using the installer.<br><br>The installer and the release notes are available at <a href="http://www.yapbam.net">http://www.yapbam.net</a></html>
 MainMenu.CheckUpdate.Success.writeProtected=<html>Your version: <B>{0}</B><BR>Latest version: <B>{1}</B><BR><BR>Yapbam cannot update itself because its installation directory is write protected.<br><br>The new version and its release notes are available at <a href="http://www.yapbam.net">http://www.yapbam.net</a></html>
 MainMenu.CheckUpdate.Success.openSite=Open Yapbam's web site
 
@@ -954,16 +951,16 @@ MainMenu.CheckUpdate.Success.openSite=Open Yapbam's web site
 #New dialog to enter a transfer between two accounts
 TransferDialog.menu=New transfer
 TransferDialog.title=New transfer
-TransferDialog.needsTwoAccounts=Creating a transfer requires at least two accounts
+TransferDialog.needsTwoAccounts=You need at least two accounts for creating a transfer 
 TransferDialog.amount=Enter the transfer amount here
 TransferDialog.from.account.tooltip=Select the source account in this menu
 TransferDialog.to.account.tooltip=Select the target account in this menu
 TransferDialog.from.valueDate.tooltip=Enter the value date for the source account
 TransferDialog.to.valueDate.tooltip=Enter the value date for the target account
 TransferDialog.from.title=From
-TransferDialog.to.title=to
-TransferDialog.error.accountAreEquals=This button is disabled because both accounts are the same
-TransferDialog.error.amountIsNotPositive=This button is disabled because the transfer's amount is null or negative
+TransferDialog.to.title=To
+TransferDialog.error.accountAreEquals=This button is disabled because source and target accounts are the same
+TransferDialog.error.amountIsNotPositive=This button is disabled because the transfer amount is null or negative
 TransferDialog.errorValueDate=This button is disabled because the value date in the "{0}" panel is wrong
 #The two following lines are the description of the transactions
 #example: For a transfer from account A to B, the description of the transaction in A account will be "To B"
@@ -973,7 +970,7 @@ TransferDialog.to.description=From {0}
 #----------------------------------
 #In the LaunchState tab of the preference panel, a new checkbox to remember how table rows are sorted 
 PreferencesDialog.startState.rowsSortKeys=Remember the sort order of rows
-PreferencesDialog.StartState.rowsSortKeys.tooltip=Check this box to remember row sort order between Yapbam launches
+PreferencesDialog.StartState.rowsSortKeys.tooltip=Check this box to remember row-sort order across Yapbam launches
 
 #----------------------------------
 #New preference sub-panel to set the background colors of the transaction table
@@ -984,30 +981,30 @@ MainFrame.Transactions.Preferences.receiptSample=Receipt
 MainFrame.Transactions.Preferences.changeExpenseBackground.title=Change expense background
 MainFrame.Transactions.Preferences.changeExpenseBackground.tooltip=Click this button to choose the expense background
 MainFrame.Transactions.Preferences.changeReceiptBackground.title=Change receipt background
-MainFrame.Transactions.Preferences.changeReceiptBackground.tooltip=Click this button to choose the reicept background
+MainFrame.Transactions.Preferences.changeReceiptBackground.tooltip=Click this button to choose the receipt background
 
 #---------------------------------
 #Backup preference panel (This functionnality is not yet implemented)
 Backup.preference.title=Backups
-Backup.preference.tooltip=This tab allows you to configure the automatic backup of your data
+Backup.preference.tooltip=This tab allows you to configure automatic backup of your data
 Backup.preference.activate=Enable automatic backups
 Backup.preference.activate.tooltip=Check this box to enable automatic backups
 Backup.preference.helpButton.toolTip=Click this to get help on automatic backup
 Backup.preference.disk.disk=Disk-based
 Backup.preference.disk.disk.tooltip=Select this option to perform your backups on a disk on your computer or a USB key
 Backup.preference.disk.select=Select
-Backup.preference.disk.select.tooltip=Click this button to choose where to save your data
+Backup.preference.disk.select.tooltip=Click this button to choose a location to save your data
 Backup.preference.ftp.ftp=FTP
-Backup.preference.ftp.ftp.tooltip=Select this to backup to a FTP server
+Backup.preference.ftp.ftp.tooltip=Select this to backup to an FTP server
 Backup.preference.ftp.server=Server:
-Backup.preference.ftp.server.tooltip=Enter the ftp host name
+Backup.preference.ftp.server.tooltip=Enter the FTP host name
 Backup.preference.ftp.directory=Directory:
-Backup.preference.ftp.directory.tooltip=Enter the remote directory path where to store your data
-Backup.preference.ftp.user.tooltip=Enter the account used to connect to server
+Backup.preference.ftp.directory.tooltip=Enter the remote directory path to store your data
+Backup.preference.ftp.user.tooltip=Enter the user name of the account used to connect to server
 Backup.preference.ftp.password.tooltip=Enter the password for the account
-Backup.preference.maxSize=Maximum disk space dedicated to backups:
+Backup.preference.maxSize=Maximum disk space reserved for backups:
 Backup.preference.maxSize.unit=MB
-Backup.preference.maxSize.tooltip=<html>Enter the maximum disk space dedicated to bakcups.<br>Once the limit is reached, the oldest backups will be deleted.<br><br>Leave this field blank to not limit the space dedicated to backups.</html>
+Backup.preference.maxSize.tooltip=<html>Enter the maximum disk space reserved for backups.<br>Once the limit is reached, the oldest backups will be deleted.<br><br>Leave this field blank to not limit the space reserved for backups.</html>
 
 Backup.preference.ftp.port.tooltip=Enter the port number here
 Backup.preference.compress=Compress backup files
@@ -1017,4 +1014,9 @@ Backup.preference.disk.default.tooltip=Sets the backup location to its default v
 Backup.preference.disk.location=Location:
 Backup.preference.ftp.server.missing=The FTP server name is empty in the "{0}" tab
 Backup.preference.ftp.user.missing=The user name is empty in the "{0}" tab
-Backup.preference.ftp.invalidPort=The ftp port is out of range in the "{0}" tab (maximum is {1})
+Backup.preference.ftp.invalidPort=The FTP port is out of range in the "{0}" tab (maximum is {1})
+
+#---------------------------------------------------------------------------------------------------------------------------------
+# Added or modified since last translation
+
+
