--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -1019,4 +1019,8 @@ Backup.preference.ftp.invalidPort=The FTP port is out of range in the "{0}" tab 
 #---------------------------------------------------------------------------------------------------------------------------------
 # Added or modified since last translation
 
+# A new process is implemented to check the transactions in the Statement tab.
+# Now, the checked transactions are displayed in the bottom of the window and the following menu allox the user to remove them from the statement.   
+MainMenu.Transactions.Uncheck=Remove from the statement
+MainMenu.Transactions.Uncheck.ToolTip=Removes the transaction from the statement
 
