--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -1023,4 +1023,7 @@ Backup.preference.ftp.invalidPort=The FTP port is out of range in the "{0}" tab 
 # Now, the checked transactions are displayed in the bottom of the window and the following menu allox the user to remove them from the statement.   
 MainMenu.Transactions.Uncheck=Remove from the statement
 MainMenu.Transactions.Uncheck.ToolTip=Removes the transaction from the statement
-
+# The title of the list of the transactions that are not already checked 
+CheckModePanel.notChecked.title=Not checked transactions
+# An alert message displayed when the edited statement is not the last one
+CheckModePanel.notLast.message=Warning, there are statements newer than this one!
