--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -210,7 +210,6 @@ CheckModePanel.title=Check mode
 CheckModePanel.title.tooltip=Click here to enable the check mode (A double click on a transaction marks it "Checked")
 CheckModePanel.valueDate.tooltip=Enter the value date to apply to the checked transactions
 CheckModePanel.valueDateEnabled=Change value date by
-CheckModePanel.valueDateEnabled.toolTip=Check this box to automatically change the value date of checked transactions by the date in next field
 
 ModeDialog.title.new=New payment mode
 ModeDialog.title.edit=Edit payment mode
@@ -1020,10 +1019,16 @@ Backup.preference.ftp.invalidPort=The FTP port is out of range in the "{0}" tab 
 # Added or modified since last translation
 
 # A new process is implemented to check the transactions in the Statement tab.
-# Now, the checked transactions are displayed in the bottom of the window and the following menu allox the user to remove them from the statement.   
-MainMenu.Transactions.Uncheck=Remove from the statement
-MainMenu.Transactions.Uncheck.ToolTip=Removes the transaction from the statement
+# Now, the window is split into two parts. In the upper one, there's the list of transactions that are not already checked, in the lower, there's the currently edited statement.  
 # The title of the list of the transactions that are not already checked 
 CheckModePanel.notChecked.title=Not checked transactions
+# This wording was already existing, but, now, the button is no more a checkbox. It changes the value date of the selected transactions. 
+CheckModePanel.valueDateEnabled.toolTip=Changes the value date of the selected transactions
+# A summary of selected unchecked transactions
+CheckModePanel.selectedSummaryPlural={0} selected transactions. Total: {1}
+CheckModePanel.selectedSummarySingular=One selected transaction. Amount: {0}
 # An alert message displayed when the edited statement is not the last one
 CheckModePanel.notLast.message=Warning, there are statements newer than this one!
+# In the edited statement, a new popup menu allow the user to remove selected transactions from the statement.   
+MainMenu.Transactions.Uncheck=Remove from the statement
+MainMenu.Transactions.Uncheck.ToolTip=Removes the transaction from the statement
