--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -1032,3 +1032,8 @@ CheckModePanel.notLast.message=Warning, there are statements newer than this one
 # In the edited statement, a new popup menu allow the user to remove selected transactions from the statement.   
 MainMenu.Transactions.Uncheck=Remove from the statement
 MainMenu.Transactions.Uncheck.ToolTip=Removes the transaction from the statement
+
+Generic.wait.title=Please wait ...
+Generic.wait.readingFrom=Reading from {0} ...
+Generic.wait.writingTo=Writing to {0} ...
+
