--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -1033,7 +1033,11 @@ CheckModePanel.notLast.message=Warning, there are statements newer than this one
 MainMenu.Transactions.Uncheck=Remove from the statement
 MainMenu.Transactions.Uncheck.ToolTip=Removes the transaction from the statement
 
+#When reading or writing data, dialog were added to show the progress of the task.
 Generic.wait.title=Please wait ...
 Generic.wait.readingFrom=Reading from {0} ...
 Generic.wait.writingTo=Writing to {0} ...
 
+# New button in the preference dialog/start state, to remember the sort order of the lines in the tables
+PreferencesDialog.StartState.rowOrder=Remember the row sort order
+PreferencesDialog.StartState.rowOrder.tooltip=Check this box to maintain the row sort order in tables across Yapbam launches
