--- a/.classpath
+++ b/.classpath
@@ -5,11 +5,12 @@
 	<classpathentry kind="src" path="testSrc"/>
 	<classpathentry kind="src" path="srcLauncher"/>
 	<classpathentry kind="src" path="srcUpdater"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="src" path="futureSrc"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.6.0_16"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="var" path="JCommon"/>
-	<classpathentry kind="var" path="JFreeChart"/>
-	<classpathentry kind="var" path="COMMONS-NET"/>
-	<classpathentry kind="var" path="A-JLib"/>
+	<classpathentry kind="var" path="JFreeChart" sourcepath="/JFreeChartSrc"/>
+	<classpathentry kind="var" path="COMMONS-NET/commons-net-3.0.1.jar" sourcepath="/COMMONS-NET/commons-net-3.0.1-sources.jar"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/A-JLib"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
