--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -1041,3 +1041,7 @@ Generic.wait.writingTo=Writing to {0} ...
 # New button in the preference dialog/start state, to remember the sort order of the lines in the tables
 PreferencesDialog.StartState.rowOrder=Remember the row sort order
 PreferencesDialog.StartState.rowOrder.tooltip=Check this box to maintain the row sort order in tables across Yapbam launches
+
+#New error message in the proxy preference panel.
+PreferencesDialog.Network.invalidProxyName=A proxy server name can not contain the character ':'
+
