--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -480,7 +480,6 @@ StatisticsPlugin.pie.byCategory.title=Category-wise expenses
 StatisticsPlugin.title=Statistics
 StatisticsPlugin.tooltip=This tab displays some statistics about your receipts and expenses
 
-HelpManager.errorDialog.message=Error in {0} opening help
 HelpManager.errorDialog.title=Unable to display help
 
 CustomFilterPanel.account.toolTip=Select allowed accounts
@@ -924,7 +923,6 @@ ImportDialog.error.emptyFile=The imported file is empty
 ImportDialog.error.exception=An error ({0}) occurred while reading the imported file
 
 MainMenu.CheckUpdate.Success.Detail=<HTML><BODY>Your version: <B>{0}</B><BR>Latest version: <B>{1}</B><BR><BR>Release notes are available on <b>http://www.yapbam.net</b><BR><BR>What would you like to do?</BODY></HTML>
-HelpManager.unsupported.message=<HTML>Unable to open a web browser.<br><br>The URL ({0}) has been copied to the clipboard.<br>You can now paste it to your web browser.</HTML> 
 openDialog.fileDoesntExist=The selected file does not exist
 openDialog.targetDoesntExist=The target of the selected shortcut does not exist.
 
@@ -1014,6 +1012,8 @@ Backup.preference.disk.location=Location:
 Backup.preference.ftp.server.missing=The FTP server name is empty in the "{0}" tab
 Backup.preference.ftp.user.missing=The user name is empty in the "{0}" tab
 Backup.preference.ftp.invalidPort=The FTP port is out of range in the "{0}" tab (maximum is {1})
+
+Browser.unsupported.message=<HTML>Unable to open a web browser.<br><br>The URL ({0}) has been copied to the clipboard.<br>You can now paste it to your web browser.</HTML> 
 
 #---------------------------------------------------------------------------------------------------------------------------------
 # Added or modified since last translation
