--- a/Yapbam/.classpath
+++ b/Yapbam/.classpath
@@ -1,22 +1,23 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="futureSrc"/>
 	<classpathentry kind="src" path="srcTests"/>
 	<classpathentry kind="src" path="testSrc"/>
 	<classpathentry kind="src" path="srcLauncher"/>
 	<classpathentry kind="src" path="srcUpdater"/>
-	<classpathentry kind="src" path="futureSrc"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/jdk1.6.0_16"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="var" path="JCommon"/>
 	<classpathentry kind="var" path="JFreeChart" sourcepath="/JFreeChartSrc"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/A-JLib"/>
 	<classpathentry kind="var" path="COMMONS-LOGGING"/>
-	<classpathentry kind="var" path="COMMONS-NET/commons-net-3.0.1.jar" sourcepath="/COMMONS-NET/commons-net-3.0.1-sources.jar"/>
+	<classpathentry kind="var" path="COMMONS-NET"/>
 	<classpathentry kind="var" path="DROPBOX"/>
 	<classpathentry kind="var" path="HTTP-CLIENT"/>
 	<classpathentry kind="var" path="HTTP-CORE"/>
 	<classpathentry kind="var" path="HTTP-MIME"/>
 	<classpathentry kind="var" path="JSON-SIMPLE"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/A-JLib"/>
+	<classpathentry kind="var" path="COMMONS-CODEC"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
