--- a/.classpath
+++ b/.classpath
@@ -6,7 +6,6 @@
 	<classpathentry kind="src" path="testSrc"/>
 	<classpathentry kind="src" path="srcLauncher"/>
 	<classpathentry kind="src" path="srcUpdater"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="var" path="JCommon"/>
 	<classpathentry kind="var" path="JFreeChart" sourcepath="/JFreeChartSrc"/>
@@ -19,5 +18,6 @@
 	<classpathentry kind="var" path="JSON-SIMPLE"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/A-JLib"/>
 	<classpathentry kind="var" path="COMMONS-CODEC"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
