--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -418,7 +418,7 @@ PeriodicalTransactionManager.active.column=Active
 PeriodicalTransactionManager.nextDate.column=Next
 PeriodicalTransactionManager.period.column=Every
 PeriodicalTransactionManager.period.daily.content={0,number} days
-PeriodicalTransactionManager.period.monthly.content={0,number} month the {1,number}
+PeriodicalTransactionManager.period.monthly.content={0,number} months the {1,number}
 PeriodicalTransactionManager.period.until={0} until {1,date,short}
 PeriodicalTransactionManager.new.toolTip=Opens a dialog to create a periodical transaction
 PeriodicalTransactionManager.delete.toolTip=Deletes the selected periodical transaction
@@ -1045,3 +1045,9 @@ PreferencesDialog.StartState.rowOrder.tooltip=Check this box to maintain the row
 #New error message in the proxy preference panel.
 PreferencesDialog.Network.invalidProxyName=A proxy server name can not contain the character ':'
 
+#Correction of singular/plural spelling in periodical transactions table
+PeriodicalTransactionManager.period.monthly.singular.content=months, the {0,number} 
+PeriodicalTransactionManager.period.daily.singular.content=days 
+#Periodical transactions can now have a period based on years
+PeriodicalTransactionManager.period.yearly.singular.content=years, le {0,number}
+PeriodicalTransactionManager.period.yearly.content={0,number} years the {1,number}
