--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -1049,5 +1049,6 @@ PreferencesDialog.Network.invalidProxyName=A proxy server name can not contain t
 PeriodicalTransactionManager.period.monthly.singular.content=months, the {0,number} 
 PeriodicalTransactionManager.period.daily.singular.content=days 
 #Periodical transactions can now have a period based on years
+PeriodicalTransactionDialog.years=years
 PeriodicalTransactionManager.period.yearly.singular.content=years, le {0,number}
 PeriodicalTransactionManager.period.yearly.content={0,number} years the {1,number}
