--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -1052,3 +1052,11 @@ PeriodicalTransactionManager.period.daily.singular.content=days
 PeriodicalTransactionDialog.years=years
 PeriodicalTransactionManager.period.yearly.singular.content=years, le {0,number}
 PeriodicalTransactionManager.period.yearly.content={0,number} years the {1,number}
+
+#Categories can now contains sub-categories
+#Here are the wording of the button in charge of grouping the sub-categories
+Subcategories.groupButton.title=Group sub-categories
+Subcategories.groupButton.tooltip=Check this box to group the sub-categories (uncheck to get the detail of sub-categories)
+# Here are the wordings of the field in the administration panel where the user can change the separator between category and sub-category-name
+Subcategories.separatorField.title=Sub-category separator: 
+Subcategories.separatorField.tooltip=<html>You can define sub-categories by separating the category name from the sub-category name with the character defined in this field.<br><b>Example:</b> Tax<u>/</u>Income and Tax<u>/</u>Local with the <u>'/'</u> separator define the "Income" and "Local" sub-categories of the "Tax" category</html>
