--- a/src/Resources.properties
+++ b/src/Resources.properties
@@ -1060,3 +1060,10 @@ Subcategories.groupButton.tooltip=Check this box to group the sub-categories (un
 # Here are the wordings of the field in the administration panel where the user can change the separator between category and sub-category-name
 Subcategories.separatorField.title=Sub-category separator: 
 Subcategories.separatorField.tooltip=<html>You can define sub-categories by separating the category name from the sub-category name with the character defined in this field.<br><b>Example:</b> Tax<u>/</u>Income and Tax<u>/</u>Local with the <u>'/'</u> separator define the "Income" and "Local" sub-categories of the "Tax" category</html>
+
+URIChooserDialog.noFileSelected=This button is disabled because no file is selected
+URIChooserDialog.openButton.title=Open
+URIChooserDialog.saveButton.title=Save
+FileChooserPanel.title=Computer
+FileChooserPanel.tooltip.save=Select this tab to save data to your local storage
+FileChooserPanel.tooltip.open=Select this tab to read data from your local storage
