--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -1067,3 +1067,38 @@ URIChooserDialog.saveButton.title=Save
 FileChooserPanel.title=Computer
 FileChooserPanel.tooltip.save=Select this tab to save data to your local storage
 FileChooserPanel.tooltip.open=Select this tab to read data from your local storage
+
+#Connect to dropbox dialog
+dropbox.Chooser.ConnectionDialog.title=Connect to Dropbox
+dropbox.Chooser.ConnectionDialog.message.content=<html>Yapbam will only have access to a specific folder (/Applications/Yapbam), not your whole account.<br><br>Click the \"<b>{0}</b>\" button when you are ready to link Yapbam to your account (requires an Internet connection)<br>Then, you will be redirected to a browser window where Dropbox will ask you to grant access to Yapbam.<br><br><b>After</b> you''ve granted access to Dropbox click the "<b>{1}</b>" button</html>
+dropbox.Chooser.ConnectionDialog.message.header=<html>Storing data to <b>Dropbox</b> requires that you authorize Yapbam to connect to your Yapbam account.</html>
+dropbox.Chooser.ConnectionDialog.startButton=Start Connection
+dropbox.Chooser.ConnectionDialog.startButton.tooltip=Click this button to start the connection process
+dropbox.Chooser.ConnectionDialog.accessNotGranted=It seems you didn't grant access to Yapbam, please retry
+dropbox.Chooser.ConnectionDialog.unexpectedError=An unexpected error occurred while connecting to Dropbox
+dropbox.Chooser.ConnectionDialog.error.processNotStarted=<html>You may click the <b>{0}</b> button first</html>
+dropbox.Chooser.ConnectionDialog.error.unableToLaunchBrowser.message=<html>Sorry, an unexpected error occurred while launching the browser
+dropbox.Chooser.ConnectionDialog.error.unableToLaunchBrowser.title=Unable to launch browser
+
+dropbox.Chooser.read.tabTooltip=Select this tab to read data from your Dropbox account
+dropbox.Chooser.save.tabTooltip=Select this tab to save to your Dropbox account
+dropbox.Chooser.connecting=Connecting to Dropbox...
+dropbox.Chooser.account=Account: {0}
+#first argument is the available space, second is the unit
+dropbox.Chooser.freeSpace={0}{1} free
+dropbox.Chooser.refresh=Refresh
+dropbox.Chooser.refresh.tooltip=Click this button to refresh the file list according to Dropbox content
+dropbox.Chooser.disconnect=Disconnect
+dropbox.Chooser.disconnect.tooltip=Click this button to disconnect from current account and connect to another
+dropbox.Chooser.selectedFile=File: 
+dropbox.Chooser.error.connectionFailed=<html>Unable to connect to Dropbox.<br>It seems you are not connected to the Internet</html>
+
+dropbox.synchronize.downloading=Downloading from Dropbox ...
+dropbox.synchronize.uploading=Uploading to Dropbox ...
+
+#Data size units
+Generic.data.unit.bytes=bytes
+Generic.data.unit.kBytes=kB
+Generic.data.unit.MBytes=MB
+Generic.data.unit.GBytes=GB
+
