--- a/Yapbam/src/Resources.properties
+++ b/Yapbam/src/Resources.properties
@@ -1102,3 +1102,12 @@ Generic.data.unit.kBytes=kB
 Generic.data.unit.MBytes=MB
 Generic.data.unit.GBytes=GB
 
+#Synchronization process messages
+synchronization.question.cancelled=<html>You cancelled the synchronization.<br><br>Would you like to open the copy stored on your computer?</html>
+synchronization.question.failed=<html>Synchronization failed.<br><br>Would you like to open the copy stored on your computer?</html>
+synchronization.question.cacheCorrupted=<html>Sorry, unable to read the local data.<br>Maybe this data is corrupted<br><br>Do you want to try downloading it again?
+synchronization.question.other=<html>{0}<br><br>What do you want to do?<br></html>
+synchronization.deleteCache.action=Delete data on the computer
+synchronization.downloadFailed=Sorry, unable to download the data
+
+
